fixed extra space issue

--- a/src/portfolio-game/game.css
+++ b/src/portfolio-game/game.css
@@ -19,10 +19,6 @@
    }
 } */
 
-html, body {
-   height: 100%;
-}
-
 body {
    background: var(--bg);
    display: flex;
